--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -1,4 +1,10 @@
 .nameOnCard {
+    margin-top: -300px;  
+}
+
+
+.canvaCard{
     display: flex;
-    
+    flex-direction: column;
+    align-items: center;
 }
