--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -1,10 +1,13 @@
 .nameOnCard {
-    margin-top: -300px;  
+    margin-top: -150px;  
 }
 
 
 .canvaCard{
     display: flex;
+    flex: wrap;
     flex-direction: column;
     align-items: center;
+    width: 250px;
 }
+
