--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -1,5 +1,5 @@
 .nameOnCard {
-    margin-top: -150px;  
+    margin-top: -119px;  
 }
 
 
@@ -11,3 +11,7 @@
     width: 250px;
 }
 
+input {
+    width: 300px;
+    height: 50px;
+}
