--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -26,3 +26,15 @@
     flex-basis: 20%;
     list-style-type: none;
 }
+
+button{
+    background-color: #a3d465;
+    margin: 10px;
+    box-sizing: 0px 0px 25px 1px black;
+    border-radius: 8px 8px 8px 8px;
+}
+
+.navbar__link{
+    color: black;
+}
+
