--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -7,11 +7,16 @@
     display: flex;
     flex: wrap;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     width: 250px;
+    margin-left: 50;
+    margin-bottom: 50;
 }
 
 input {
     width: 300px;
     height: 50px;
 }
+
+
