--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -29,3 +29,9 @@ input {
     display: flex;
     justify-content: center;
 }
+
+.location {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
