--- a/src/components/cities/CityDetails.css
+++ b/src/components/cities/CityDetails.css
@@ -50,6 +50,23 @@
     font-size: 2rem;
 }
 
+.review__header {
+    padding: 1rem;
+    font-size: 2.5rem;
+}
+
+.list__reviews{
+    padding: 1rem;
+    font-size: 1rem;
+}
+
+.single_review{
+    background-color: lightgray;
+    border: dotted 0.5rem #e447d2;
+    margin: 2rem ;
+    padding: 2rem;
+}
+
 .image{
     padding: 1rem;
 }
@@ -57,4 +74,14 @@
 .flex {
     display: flex;
     flex-wrap: wrap;
+}
+
+.form__reviews {
+    padding: 1rem;
+    font-size: 1.5rem;
+}
+
+.btn{
+    background-color: #e447d2;
+    color: white;
 }
